--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello from Go</title>
+    <title>ReelingIt</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="app.webmanifest">
+    <link rel="icon" href="images/icon.png">
+    <script defer type="module" src="app.js"></script>
 </head>
 
 <body>
-    <h1>Hello form Go</h1>
+    <header>
+        <h1>
+            <imc src="images/logo.png" height="35" alt="ReelingIt">
+        </h1>
+        <nav>
+            <ul>
+                <li><a class="navlink" href="/">Movies</a></li>
+                <li><a class="navlink" href="/account/favorites">Favorites</a></li>
+                <li><a class="navlink" href="/account/watchlist">Watchlist</a></li>
+                <li><a class="navlink" href="/account/">My Account</a></li>
+            </ul>
+        </nav>
+        <div>
+            <form onsubmit="app.search(event)">
+                <input type="search" placeholder="Search movies">
+            </form>
+        </div>
+    </header>
+    <main></main>
+
+    <!--Templates-->
+    <template id="template-home">
+        <section id="top-10" class="vertical-scroll">
+            <h2>This week's Top Movies</h2>
+            <ul></ul>
+        </section>
+        <section id="random" class="vertical-scroll">
+            <h2>Something to watch today</h2>
+            <ul></ul>
+        </section>
+    </template>
+    <template id="template-movie-details">
+        <article id="movie">
+            <h2><animated-loading elements="2"></animated-loading></h2>
+            <h3></h3>
+            <header>
+                <img src="" alt="Poster">
+                <youtube-embed id="trailer" data-url=""></youtube-embed>
+                <section id="actions">
+                    <dl id="metadata"></dl>
+                    <button>Add to Favorites</button>
+                    <button>Add to Watchlist</button>
+                </section>
+            </header>
+            <ul id="genres"></ul>
+            <p id="overview"></p>
+            <ul id="cast"></ul>
+        </article>
+    </template>
+
+    <footer>
+        <p>ReelingIt - FrontEndMasters.com</p>
+    </footer>
 </body>
 
 </html>
